# pyfinquant-boilerplate

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  make.bat  pyproject.toml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  pr.yml
docs/: api.rst  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  usage.rst
pyfinquant/: __init__.py  utils.py
pyfinquant/backtesting/: __init__.py
pyfinquant/data/: __init__.py  processors.py
pyfinquant/options/: __init__.py
pyfinquant/portfolio/: __init__.py
pyfinquant/risk/: __init__.py
pyfinquant/strategies/: __init__.py
templates/: backtest_template.py  data_fetcher_template.py  strategy_template.py
tests/: __init__.py  test_utils.py
